--- a/sloan.ipynb
+++ b/sloan.ipynb
@@ -149,7 +149,7 @@
    },
    "outputs": [],
    "source": [
-    "filepath = '/home/roshankondapalli/Documents/Textbooks1/Sci_Computing/Databases/Practice_Datasets/Sloan_SDSS17/star_classification.csv'"
+    "filepath = 'SDSS17.csv'"
    ]
   },
   {
@@ -1936,9 +1936,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
